--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 :root {
-  --color-primary: #14F195;
+  --color-primary: #ca4385;
   /* --color-dark: #121212; */
   --color-dark: #000000;
   --color-gray: #6B7280;
